# haskell-graylog

./: .gitignore  LICENSE  Makefile  README.md  graylog.cabal
src/Graylog/: Gelf.hs  Types.hs  UDP.hs
test/: Main.hs
test/Test/Graylog/: Gelf.hs  UDP.hs
test/Test/Graylog/UDP/: large-sample.json
