name:             graylog
version:          0.1.0.0
synopsis:         Support for graylog output.
description:      Please see README.md
homepage:         http://github.com/githubuser/graylog#readme
license:          MIT
license-file:     LICENSE
author:           Andrew Rademacher
maintainer:       andrewrademacher@gmail.com
copyright:        2016 Andrew Rademacher
category:         Web
build-type:       Simple
cabal-version:    >=1.10

library 
   hs-source-dirs:      src
   default-language:    Haskell2010

   exposed-modules:     Graylog.Gelf

   ghc-options:         -Wall -rtsopts

   build-depends:       base            ==4.*
   
                     ,  aeson
                     ,  aeson-casing
                     ,  scientific
                     ,  text
                     ,  time
                     ,  vector
